potentially stop people from software-locking
not sure if using the numworks site while havng an unlocked bootloader will lock it again.. but better safe than sorry

--- a/_pages/en_US/faq.txt
+++ b/_pages/en_US/faq.txt
@@ -24,4 +24,5 @@ phones can be used with an USB OTG cable.
 Epsilon, so yes.
 
 To update Epsilon after installing the Phi bootloader, you can just hold 4 while pressing reset to access the
-softloader and go on Numworks' website. From there, just update Epsilon normally.
+softloader and flash the external.bin of which version you want with WebDFU. We won't be providing links to
+any versions on this site since Epsilon is now proprietary. You shouldn't use Numworks' site to update.
