--- a/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -8,7 +8,7 @@
     "description": "The label for category N0110 in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.N0110.link.generated-index.description": {
-    "message": "Comment customiser sa Numworks N0110",
+    "message": "Comment personnaliser sa Numworks N0110",
     "description": "The generated-index page description for category N0110 in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Hardware method": {
