--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -1,10 +1,10 @@
 {
   "link.title.Community": {
-    "message": "Community",
+    "message": "Communauté",
     "description": "The title of the footer links column with title=Community in the footer"
   },
   "link.title.More": {
-    "message": "More",
+    "message": "Autres liens",
     "description": "The title of the footer links column with title=More in the footer"
   },
   "link.item.label.Discord": {
@@ -20,7 +20,7 @@
     "description": "The label of footer link with label=Credits linking to /docs/credits"
   },
   "copyright": {
-    "message": "Copyright © 2023 Omega Community, Built with Docusaurus.",
+    "message": "Copyright © 2023 Omega Community, Réalisé avec Docusaurus.",
     "description": "The footer copyright"
   }
 }
