--- a/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -3,13 +3,13 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.N0110": {
-    "message": "N0110",
+  "sidebar.tutorialSidebar.category.unlock": {
+    "message": "Débloquage avant installation",
     "description": "The label for category N0110 in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.N0110.link.generated-index.description": {
-    "message": "Comment personnaliser sa Numworks N0110",
-    "description": "The generated-index page description for category N0110 in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.unlock.link.generated-index.description": {
+    "message": "Comment débloquer sa Numworks pour installer un OS Custom",
+    "description": "The generated-index page description for category unlock in sidebar tutorialSidebar"
   },
   "sidebar.tutorialSidebar.category.Hardware method": {
     "message": "Méthode Hardware",
