Fix flowchart and translation
- Update flowchart to be translated
- Fix translation problems

--- a/i18n/fr/docusaurus-plugin-content-docs/current.json
+++ b/i18n/fr/docusaurus-plugin-content-docs/current.json
@@ -3,14 +3,6 @@
     "message": "Next",
     "description": "The label for version current"
   },
-  "sidebar.tutorialSidebar.category.unlock": {
-    "message": "Débloquage avant installation",
-    "description": "The label for category N0110 in sidebar tutorialSidebar"
-  },
-  "sidebar.tutorialSidebar.category.unlock.link.generated-index.description": {
-    "message": "Comment débloquer sa Numworks pour installer un OS Custom",
-    "description": "The generated-index page description for category unlock in sidebar tutorialSidebar"
-  },
   "sidebar.tutorialSidebar.category.Hardware method": {
     "message": "Méthode Hardware",
     "description": "The label for category Hardware method in sidebar tutorialSidebar"
@@ -27,20 +19,28 @@
     "message": "Débloquez votre calculatrice facilement avec Phi",
     "description": "The generated-index page description for category Phi in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.No CFW": {
+  "sidebar.tutorialSidebar.category.Unlock before installation": {
+    "message": "Débloquer avant installation",
+    "description": "The label for category Unlock before installation in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.Unlock before installation.link.generated-index.description": {
+    "message": "Comment débloquer sa Numworks pour installer un OS Custom",
+    "description": "The generated-index page description for category Unlock before installation in sidebar tutorialSidebar"
+  },
+  "sidebar.tutorialSidebar.category.No Custom OS": {
     "message": "Pas d'OS Custom",
-    "description": "The label for category No CFW in sidebar tutorialSidebar"
+    "description": "The label for category No Custom OS in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.No CFW.link.generated-index.description": {
-    "message": "Qu'est ce que vous pouvez faire avec une calculatrice bloquée",
-    "description": "The generated-index page description for category No CFW in sidebar tutorialSidebar"
+  "sidebar.tutorialSidebar.category.No Custom OS.link.generated-index.description": {
+    "message": "What you can do with a locked calculator",
+    "description": "The generated-index page description for category No Custom OS in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.CFW": {
+  "sidebar.tutorialSidebar.category.Custom OS": {
     "message": "OS Custom",
-    "description": "The label for category CFW in sidebar tutorialSidebar"
+    "description": "The label for category Custom OS in sidebar tutorialSidebar"
   },
-  "sidebar.tutorialSidebar.category.CFW.link.generated-index.description": {
+  "sidebar.tutorialSidebar.category.Custom OS.link.generated-index.description": {
     "message": "Qu'est-il possible avec un OS Custom ?",
-    "description": "The generated-index page description for category CFW in sidebar tutorialSidebar"
+    "description": "The generated-index page description for category Custom OS in sidebar tutorialSidebar"
   }
 }
