--- a/i18n/fr/docusaurus-theme-classic/footer.json
+++ b/i18n/fr/docusaurus-theme-classic/footer.json
@@ -16,7 +16,7 @@
     "description": "The label of footer link with label=GitHub linking to https://github.com/Omega-Numworks/Omega-Guide"
   },
   "link.item.label.Credits": {
-    "message": "Credits",
+    "message": "Crédits",
     "description": "The label of footer link with label=Credits linking to /docs/credits"
   },
   "copyright": {
