Changed doc title to capitalize the W

--- a/i18n/fr/docusaurus-theme-classic/navbar.json
+++ b/i18n/fr/docusaurus-theme-classic/navbar.json
@@ -1,6 +1,6 @@
 {
   "title": {
-    "message": "Numworks Guide",
+    "message": "NumWorks Guide",
     "description": "The title in the navbar"
   },
   "logo.alt": {
